styles.css
* {
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

body {
    font-family: "Open Sans";
    background-image: linear-gradient(120deg, hsl(0, 15%, 18%), hsl(0, 7%, 24%));
    background-attachment: fixed;
    margin: 0;
    color: antiquewhite;
}

/******************
 * NAVBAR STYLING *
 ******************/

.navbar {
    background-color: hsl(0, 7%, 13%);
    margin: 0;
    padding: 5px;
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
    display: flex;
    flex-direction: row;
    justify-content: end;
    border-bottom: 2px solid rgb(114, 109, 103);
}

.nav-icon {
    vertical-align: middle;
    margin: 0 10px 0 0;
    stroke: antiquewhite;
}

.navbar a {
    padding: 12px;
    text-decoration: none;
    font-weight: bold;
    color: antiquewhite;
    border-radius: 7px;
}

.navbar a:hover {
    color: burlywood;
    background-color: hsl(0, 15%, 27%);
}

.navbar a:hover svg {
    stroke: burlywood;
}

.navbar a:active {
    color: dimgrey;
    background-color: hsl(0, 15%, 18%);
}

.navbar a:active svg {
    stroke: dimgrey;
}

header {
    padding-top: 40px;
}

#title {
    font-family: "Domine";
    text-align: center;
    font-size: 36pt;
    padding: 120px 0 calc(60px - 36pt) 0;
}

/*******************
 * SECTION STYLING *
 *******************/

.big-emoji {
    font-size: 4rem;
    vertical-align: middle;
}

section:before {
    height: 40px;
    content: "";
    display:block;
}

section p:last-of-type {
    margin-bottom: -40px;
}

.section-title {
    margin: 50px;
    font-family: "Domine";
    font-size: 24pt;
}

p {
    margin: 0 50px;
    font-size: large;
}

ol {
    margin: 25px 50px;
    font-size: large;
}

.obsidian-logo {
    float: right;
    background-color: hsl(220, 50%, 91%);
    margin: 0 50px 30px 30px;
    padding: 10px;
    height: 150px;
    width: 150px;
    border-radius: 20%;
    box-shadow: 0 0 20px black;
    transition: filter 0.3s, box-shadow 0.3s;
}

.obsidian-logo:hover {
    filter: sepia(50%);
    box-shadow: 0 0 40px black;
}

.obsidian-logo:active {
    filter: sepia(50%) brightness(50%);
    box-shadow: 0 0 40px black;
}

@media only screen and (max-width: 768px) {
    .navbar {
        position: static;
        flex-wrap: wrap;
    }

    .navbar a {
        text-align: center;
        width: 100%;
    }

    header {
        padding-top: 0px;
    }

    #title {
        font-size: 24pt;
        padding: 90px 0 calc(90px - 24pt) 0;
    }

    .big-emoji {
        font-size: 3rem;
        vertical-align: middle;
    }

    section:before {
        height: 0;
    }
    
    section {
        margin-bottom: 0;
    }

    .section-title {
        margin: 35px;
        font-family: "Domine";
        font-size: 18pt;
    }

    p {
        margin: 35px;
        font-size: medium;
    }

    ol {
        margin: 35px;
        font-size: medium;
    }
}

